# Compleo

./: .gitignore  README.md  index.html  install.sh  main.html  package-lock.json  package.json  popover.html  settings.html  vite.config.ts
.kiro/specs/: compleo-design.md
src/: App.tsx  app-main.tsx  popover-main.tsx  settings-main.tsx  theme.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: auto_trigger.rs  config.rs  distill.rs  input_monitor.rs  lib.rs  main.rs  storage.rs
src-tauri/src/llm/: mod.rs  openai.rs
src-tauri/src/platform/: macos.rs  mod.rs
src-tauri/swift-ocr/: compleo-ocr  main.swift
src/hooks/: useTheme.ts
src/windows/: MainApp.css  MainApp.tsx  Overlay.css  Popover.css  Popover.tsx  Settings.css  Settings.tsx
