[package]
name = "compleo"
version = "0.1.0"
description = "AI Reply Assistant"
authors = ["steven"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "compleo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
log = "0.4"
thiserror = "2"
dirs = "6"
rusqlite = { version = "0.34", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
futures = "0.3"
tauri = { version = "2", features = ["tray-icon", "macos-private-api", "image-png"] }
tauri-plugin-log = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"

[target.'cfg(target_os = "macos")'.dependencies]
objc2-app-kit = { version = "0.3", features = ["NSWindow", "NSPanel", "NSResponder", "NSRunningApplication", "NSWorkspace", "NSPasteboard", "objc2-core-foundation"] }
objc2-foundation = { version = "0.3", features = ["NSString"] }
core-graphics = "0.25"
core-foundation = "0.10"
core-foundation-sys = "0.8"
window-vibrancy = "0.6"
